V0.0.16.0:
- feat: core product apis
- feat; core product api docs
